# qchem

./: .clangd  .gitattributes  .gitignore  .gitmodules  Atom.db  CLAUDE.md  CMakeLists.txt  Dependencies  Doxyfile  NOTES  README.md  TODO  dft.cbp  dft.workspace  plotcd.C  qchem.cbp  qchem.code-workspace  qchem.depend  qchem.workspace  qchem3.code-workspace
CLIapps/: CMakeLists.txt
UnitTests/: APW_UT.C  A_Cache4.C  A_DFT.C  A_DFT_U.C  A_DHF.C  A_HF.C  A_HF_P.C  A_HF_U.C  A_HF_dfPin.C  A_PG.C  A_PP.C  A_Pool.C  A_SHF.C  Angular.C  AtomTester.C  AtomTester.H  AtomTesterSlater.C  AtomTesterSlater.H  AtomTests.C  AtomTestsSlater.C  AtomicDensityUT.C  BSplines.C  BandStructureUT.C  BaseTester.C  BaseTester.H  BasisSet1_Atom.C  BasisSet1_DHF.C  BasisSetPool.C  BasisSetPool.H  BasisSetPoolImp.C  BasisSet_Atom.C  BasisSet_Atom1.C  BasisSet_DHF.C  BasisSet_Lattice.C  BasisSet_SL.C  CMakeLists.txt  DFTTester.C  DFTTester.H  DFTTesterSlater.C  DFTTesterSlater.H  (+78 more)
UnitTests/CP2K/: .gitignore  README.md  SIPP-SR-BASIS  VALENCE-LOWQ-BASIS  naf_gpw_sr_diag.inp  si_fcc_gpw.inp  si_fcc_gpw_222.inp
gtkapp/: AtomFrame.H  AtomFrame.cpp  BasisSetFrame.H  BasisSetFrame.cpp  CMakeLists.txt  ControllerWindow.H  ControllerWindow.cpp  HamiltonianFrame.H  HamiltonianFrame.cpp  LAParamsFrame.H  LAParamsFrame.cpp  MeshFrame.H  MeshFrame.cpp  PlotWindow.H  PlotWindow.cpp  SCFFrame.H  SCFFrame.cpp  enumDropDown.H  qchem-gtk.cmb  qchem-gtk.cpp  qchem-gtk.ui
pybind/: CMakeLists.txt  qcb_api.h  qchem_bridge.cpp  qchem_py.cpp
src/: AnalyticIE.C  BasisSet.C  CMakeLists.txt  ChargeDensity.C  EnergyLevel.C  IntegralEngine1.C  InvPosition.H  Irrep_QNs.C  LASolver.C  Makefile  Mesh.C  Orbital.C  Orbital_QNs.C  SCFAccelerator.C  SCFIterator.C  ScalarFunction.C  Spin.C  TotalEnergy.C  UnitSymmetryQN.C  VectorFunction.C  WaveFunction.C  forward.H  types.H
src/Base/: DFTDefines.C  PeriodicTable.C  ScalarFunction.C  pmstream.C  stl_io.C
src/BasisSet/: AtomIE.C  AtomIEClient.C  BFGrouper.C  BS_Common.C  Band_DFT_IBS.C  Band_FT_IBS.C  BasisFunction.C  BasisFunction.H  BasisGroup.C  BasisGroup.H  BasisGroupBrowser.C  BasisGroupBrowser.H  BasisSet.C  BasisSet.H  BasisSet1.C  BasisSetBrowser.C  BasisSetBrowser.H  CMakeLists.txt  Cache4.C  Common.C  DB_Cache1.C  DFTPotential_IBS.C  DFT_IBS.C  DFT_IBS_Common.C  DHF_IBS.C  DHF_IBS_Common.C  Dirac_IBS.C  ERI4.C  Fit_IBS.C  Fit_IBS_Common.C  FourierDFT_IBS.C  G_FieldEvaluator.C  GaussianScaler.C  HF_IBS.C  HF_IBS_Common.C  IBS_Common.C  IntegralDataBase.C  IntegralDataBase.H  IntegralEngine.C  IntegralEngine.H  (+27 more)
src/BasisSet1/: BasisSet.C  CMakeLists.txt  DB_Cache.C  DB_Cache1.C  Fit_IBS.C  IrrepBasisSet.C  Orbital_1E_IBS.C  Orbital_1E_IBS1.C  Orbital_DFT_IBS.C  Orbital_DHF_IBS.C  Orbital_HF_IBS.C  Orbital_HF_IBS1.C
src/BasisSetImplementation/: BasisSetImplementation.C  BasisSetImplementation.H  Gaussian94RFR.C  Gaussian94RFR.H  IntegralEngineImplementation.C  IntegralEngineImplementation.H  NumericalIE.C  NumericalIE.H  NumericalIEImp.C  NumericalIEImp.H  TBasisSetImplementation.C  TBasisSetImplementation.H  UnitSymmetryQN.C  UnitSymmetryQN.H
src/Calculation/: AtomCalculation.C  CMakeLists.txt  Calculation.C  ValenceBasisGen.C
src/ChargeDensity/: AtomicDensity.C  CMakeLists.txt  ChargeDensity.C  ChargeDensity.H  CompositeCD.C  CompositeFittedCD.C  DensityMixer.C  Factory.C  FittedCD.C  FittedCD.H  FittedPolarizedCD.C  FittedPolarizedCD.H  FourierDensity.C  FourierMixCD.C  FourierSeedCD.C  IrrepCD.C  NumericCD.C  PolarizedCD.C  PolarizedCD.H  Seed.C  SeedCD.C  Types.C
src/ChargeDensityImplementation/: FittedCDImplementation.C  FittedCDImplementation.H  PolarizedCDImplementation.C  PolarizedCDImplementation.H
src/Cluster/: Atom.C  Atom.H  AtomImp.C  AtomMesh.C  AtomMeshImp.C  CMakeLists.txt  Cluster.C  Cluster.H  ClusterBrowser.C  ClusterBrowser.H  Lattice.C  Lattice.H  LatticeImp.C  Molecule.C  Molecule.H  MoleculeImp.C  MoleculeMesh.C  UnitCell.C  UnitCell.H  UnitCellMesh.C
src/Common/: Blaze.C  CMakeLists.txt  Constants.C  Constants.cpp  Convert.C  DFTDefines.C  FFT.C  Factorials.C  Iterators.C  Math.C  PeriodicTable.C  ScalarFunction.C  Strings.C  Types.C  UniqueID.C  UniqueIDImp.C  VectorFunction.C  intpow.C  matrix2d.C  matrix3d.C  pmstream.C  stl_io.C  stream.C  vector2d.C  vector3d.C
src/Containers/: ERI4.C  Triangle.C  Triangle2D.C  Triangle3D.C  stl_io.C
src/DFTDataBase/: DFTDataBase.C  DFTDataBase.H  Instance.Ci  InstanceComplexIDB.C  InstanceIDB.C
src/DataBase/: HeapDB.C
src/ElectronConfigurations/: AtomDirac_EC.C  Atom_EC.C  CMakeLists.txt  Crystal_EC.C  ElectronConfiguration.C  MolecularSym_EC.C  Molecule_EC.C
src/Factories/: BasisSetFactories.C  BasisSetFactories1.C  ChargeDensityFactories.C  ClusterFactories.C  ExchangeFunctionalFactories.C  FittedFunctionFactories.C  HamiltonianFactories.C  MeshFactories.C  OrbitalFactories.C  RadialFunctionFactories.C  TriangleFactories.C  WaveFunctionFactories.C
src/Factory/: CMakeLists.txt  Factory.C
src/Fitting/: CMakeLists.txt  ConstrainedFF.C  ConstrainedFF.c  FittedFunction.C  FittedFunctionClient.C  FittedFunctionImp.C  FourierFunctionFitter.C  FunctionFitter.C  IntegralConstrainedFF.C  Types.C
src/Functions/: FittedFunction.C  FittedFunction.H  FittedFunctionClient.C  FittedFunctionClient.H  PlottableScalarFunction.C  PlottableScalarFunction.H  PlottableVectorFunction.C  PlottableVectorFunction.H  Plotter.C  Plotter.H  ScalarFunction.C  ScalarFunction.H  VectorFunction.C  VectorFunction.H
src/FunctionsImp/: ConstrainedFF.C  ConstrainedFF.H  DumpScalarData.C  DumpScalarData.H  DumpVectorData.C  DumpVectorData.H  FittedFunctionImplementation.C  FittedFunctionImplementation.H  IntegralConstrainedFF.C  IntegralConstrainedFF.H  PlotterImplementation.C  PlotterImplementation.H  ScalarFunctionBuffer.C  ScalarFunctionBuffer.H  VectorFunctionBuffer.C  VectorFunctionBuffer.H
src/Hamiltonian/: CMakeLists.txt  DiracKinetic.C  Energy.C  ExchangeFunctional.C  ExchangeFunctional.H  ExchangeFunctionalFactories.C  ExchangeFunctionalImp.C  Factory.C  FittedVee.C  FittedVeeCD.C  FittedVxc.C  Hamiltonian.C  (+17 more)
(+2253 files in other folders)
